// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled lazyLoading 1`] = `
<Image
  alt="test"
  disableLazy={true}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
>
  <img
    alt="test"
    className=""
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  />
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    />
  </noscript>
</Image>
`;

exports[`Image test 1`] = `
<Image
  alt="test"
  disableLazy={false}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
>
  <ImagePreloader
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet={null}
  >
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205/smart/width/5/height/5"
    />
  </ImagePreloader>
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    />
  </noscript>
</Image>
`;

exports[`Image test for non-vignette 1`] = `
<Image
  alt="test"
  disableLazy={false}
  src="https://foo.jpg"
>
  <img
    alt="test"
    className=""
    src="https://foo.jpg"
  />
</Image>
`;

exports[`Updating an image src 1`] = `
<Image
  alt="test"
  disableLazy={false}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
>
  <ImagePreloader
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet={null}
  >
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205/smart/width/5/height/5"
    />
  </ImagePreloader>
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    />
  </noscript>
</Image>
`;
